Bugfix: Footer brand link click-area too large

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -619,7 +619,7 @@ a:visited {
 }
 
 .footer-brand {
-  display: block;
+  display: inline-block;
   margin-bottom: 1rem;
   font-size: 1.25rem;
   font-weight: 900;
